--- a/css/sing-up.css
+++ b/css/sing-up.css
@@ -1,3 +1,16 @@
+body {
+  background: -webkit-linear-gradient(
+    to right,
+    #ee7724,
+    #d8363a,
+    #dd3675,
+    #b44593
+  );
+
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: linear-gradient(to right, #ee7724, #d8363a, #dd3675, #b44593);
+}
+
 #menu.navbar-default .navbar-nav .login {
   color: #ce2a36;
   margin-left: 0px;
@@ -19,7 +32,6 @@
   padding: 20px;
   background: #fff;
   border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
 h2 {
