--- a/css/style.css
+++ b/css/style.css
@@ -106,7 +106,8 @@ hr {
   color: #ce2a36;
   margin-left: 0px;
   padding: 10px;
-  width: 120px;
+  width: auto;
+  height: auto;
   text-align: center;
   border: black 5px solid;
   border-radius: 10px;
